# Python-vs-C-

./: README.md
Examn_objective/Sendthis/Task1/: CMakeLists.txt  InputFile.csv  OutputFile.csv  README.txt
Examn_objective/Sendthis/Task2/: CMakeLists.txt
Examn_objective/Task 2/: app  test
Examn_objective/Task1/: README.txt  main  test
File_IO/: The_file.txt  TxtfileIo  TxtfileIo.cpp  fileIO_fstream  fileIO_fstream.cpp  test  test.cpp  test.txt
File_IO/test/: test
IO/: print_cpp.cpp  print_python.py
OOP/: Main  Main.cpp  humanClass.h  humanClass.py
OOP/Revisions/: CMakeLists.txt
Patterns/Singeleton/: Singleton.cpp  a.out
Pointers/example_1/: test
cpp_classes/class_inher/: foo.cpp  foo.h  main.cpp  test
cpp_classes/class_inher/example_1/: test
cpp_classes/class_inher/example_2/: test
dict/STL_library/: vectors  vectors.cpp  vectors_2  vectors_2.cpp
functions/: functions
loops/: loops.cpp
multithreading/: example1
